--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nextui-org/react": "^2.1.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-select-async-paginate": "^0.7.3",
     "redux": "^4.2.1"
   },
   "devDependencies": {
