--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.10",
     "@reduxjs/toolkit": "^1.9.5",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
